# edu-spice

./: .clang-format  .gitignore  CMakeLists.txt
dep/: CMakeLists.txt
src/: SpiceComponent.cpp  SpiceComponent.hpp  SpiceEngine.cpp  SpiceEngine.hpp  Types.hpp  main.cpp
tests/: CMakeLists.txt
tests/ohms_law/: ckt.lua  ohms_law.cpp
